[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/objects/TextBox.gd" type="Script" id=1]
[ext_resource path="res://src/objects/BlinkingArrow.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/objects/ChoiceSelector.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/themes/textbox_theme.tres" type="Theme" id=4]
[ext_resource path="res://assets/sprites/textbox/text-box.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/textbox/character-name-box.png" type="Texture" id=6]
[ext_resource path="res://src/objects/FadingControl.gd" type="Script" id=8]

[sub_resource type="Animation" id=4]
resource_name = "namebox_fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("NameBackground:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("NameBackground:margin_left")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ 32.0, 80.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("NameBackground:margin_right")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ 520.0, 566.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "namebox_fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("NameBackground:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("NameBackground:margin_left")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 5, 1 ),
"update": 0,
"values": [ 80, 128.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("NameBackground:margin_right")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 5, 1 ),
"update": 0,
"values": [ 566, 566.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "setup"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("NameBackground:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("NameBackground:margin_left")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 80.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("NameBackground:margin_right")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 582.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("RichTextLabel:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "textbox_fade_in"
length = 0.5
step = 0.0333333
tracks/0/type = "value"
tracks/0/path = NodePath("RichTextLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.133333, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.198, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "textbox_fade_out"
length = 0.4
step = 0.0333333
tracks/0/type = "value"
tracks/0/path = NodePath("RichTextLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.133333, 0.266667, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.396 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="TextBox" type="TextureRect"]
margin_top = 792.0
margin_right = 1920.0
margin_bottom = 1087.0
mouse_filter = 2
theme = ExtResource( 4 )
texture = ExtResource( 5 )
script = ExtResource( 1 )

[node name="NameBackground" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 128.0
margin_top = -40.0
margin_right = 566.0
margin_bottom = 71.0
mouse_filter = 2
texture = ExtResource( 6 )
script = ExtResource( 8 )

[node name="NameLabel" type="Label" parent="NameBackground"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -244.0
margin_top = -51.5
margin_right = 216.0
margin_bottom = 33.5
text = "Здесь имя"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -864.0
margin_top = -91.5
margin_right = 864.0
margin_bottom = 100.5
mouse_filter = 2
bbcode_enabled = true
bbcode_text = "Text body"
meta_underlined = false
text = "Чота написано лоооооол"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlinkingArrow" parent="RichTextLabel" instance=ExtResource( 2 )]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 17.0
margin_top = 1.0
margin_right = 17.0
margin_bottom = 1.0
mouse_filter = 1

[node name="ChoiceSelector" parent="." instance=ExtResource( 3 )]
margin_left = 657.0
margin_right = -658.0
mouse_filter = 2

[node name="Tween" type="Tween" parent="."]

[node name="FadeAnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "setup"
anims/namebox_fade_in = SubResource( 4 )
anims/namebox_fade_out = SubResource( 5 )
anims/setup = SubResource( 3 )
anims/textbox_fade_in = SubResource( 1 )
anims/textbox_fade_out = SubResource( 2 )
